more optimal css

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -11,6 +11,7 @@ governing permissions and limitations under the License.
 */
 
 /* import the global stylesheets */
+/* using astro's global customCss variable
 @import '@spectrum-web-components/styles/typography.css';
 @import '@spectrum-web-components/styles/scale-medium.css';
 @import '@spectrum-css/vars/dist/spectrum-global.css';
@@ -20,6 +21,7 @@ governing permissions and limitations under the License.
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-balham.css';
 @import 'tabulator-tables/dist/css/tabulator.min.css';
+*/
 
 /* Color Theme Swatches in Hex */
 .Cyan-600-Theme-1-1-hex {
