--- a/src/components/general/mayors/Mayors.astro
+++ b/src/components/general/mayors/Mayors.astro
@@ -19,7 +19,7 @@ import {
 import AllGenerals from '../AllGenerals.astro';
 import AllConflicts from '../AllConflicts.astro';
 
-const DEBUG = true;
+const DEBUG = false;
 
 interface Props {
   generalClass: generalSpecialistsType;
