get rid of some console warnings from spectrum

--- a/src/components/Spectrum/PageFrame.astro
+++ b/src/components/Spectrum/PageFrame.astro
@@ -20,7 +20,7 @@ import 'node_modules/@spectrum-css/icon/dist/index.css';
   import '@spectrum-web-components/theme/src/themes.js';
 </script>
 <div class="spectrum spectrum--medium">
-  <sp-theme theme="spectrum" scale="medium">
+  <sp-theme system="spectrum" color='light' scale="medium">
     <Default class=".header" {...Astro.props}>
       <slot name="header" slot="header" />
       <slot name="sidebar" slot="sidebar" />
