--- a/packages/frontend/views/layouts/base.html.njk
+++ b/packages/frontend/views/layouts/base.html.njk
@@ -2,6 +2,8 @@
 <html>
   <head>
     {% block head %}
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>{{ pageTitle }}</title>
     {% endblock %}
   </head>
